--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,4 @@
 .App {
-  text-align: center;
   background-color: gainsboro;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  padding: 3em;
 }
